--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt install -y protobuf-compiler
-          go get -u golang.org/x/lint/golint
+          env GO111MODULE=on go get -u golang.org/x/lint/golint
           go install -v github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest
           go install -v github.com/ramya-rao-a/go-outline@latest
           go install -v github.com/cweill/gotests/gotests@latest
