--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Set up Go
         uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
       - name: Install dependencies
         run: |
