Add Make Proto and Cert for Go workflow
Signed-off-by: elulcao <elulcao@icloud.com>

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Make Proto and Certs
         run: |
+          pwd
+          ls -la
           make proto
           make cert
 
