Add Make Proto and Cert for Go workflow
Signed-off-by: elulcao <elulcao@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 **/*.pb.go
 **/*.code-workspace
 **/vendor
-**/certificates/*
+**/certificates/assets/*.pem
+**/certificates/assets/*.srl
 !**/certificates/*.go
 !**/certificates/*.cnf
 
