Add staticcheck to devcontainer and workflow
Signed-off-by: elulcao <elulcao@icloud.com>

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -27,6 +27,7 @@ jobs:
           go install -v github.com/fatih/gomodifytags@latest
           go install -v github.com/josharian/impl@latest
           go install -v github.com/haya14busa/goplay/cmd/goplay@latest
+          go install -v honnef.co/go/tools/cmd/staticcheck@latest
           go install -v google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install -v google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
