--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -15,12 +15,12 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
+          go-version: 1.19
 
       - name: Install dependencies
         run: |
           sudo apt install -y protobuf-compiler
-          env GO111MODULE=on go get -u golang.org/x/lint/golint
+          go install -v golang.org/x/lint/golint@latest
           go install -v github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest
           go install -v github.com/ramya-rao-a/go-outline@latest
           go install -v github.com/cweill/gotests/gotests@latest
