Update pipeline GO
Signed-off-by: Daniel Carvallo <elulcao@icloud.com>

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -25,6 +25,12 @@ jobs:
       - name: Show versions
         run: |
           go version
+          protoc --version
+
+      - name: Make Proto and Certs
+        run: |
+          make proto
+          make cert
 
       - name: Vet
         run: |
