--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -22,6 +22,13 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
 
+      - name: Install dependencies
+        run: |
+          sudo apt install -y protobuf-compiler
+          go install -v honnef.co/go/tools/cmd/staticcheck@latest
+          go install -v google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install -v google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+
       - name: Show versions
         run: |
           go version
