--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt install -y protobuf-compiler
+          apt install -y protobuf-compiler
           go install -v honnef.co/go/tools/cmd/staticcheck@latest
           go install -v google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install -v google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
