--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,23 @@
 			// Options
 			"NODE_VERSION": "lts/*"
 		}
-	},
+},
+// Use 'customizations/vscode/settings' instead of 'settings'
+"customizations": {
+  "vscode": {
+    "go.toolsManagement.checkForUpdates": "local",
+    "go.useLanguageServer": true,
+    "go.gopath": "/go",
+    "go.goroot": "/usr/local/go",
+    "go.formatTool": "goimports",
+    "[go]": {
+      "editor.snippetSuggestions": "none",
+      "editor.formatOnSave": true,
+      "editor.codeActionsOnSave": {
+        "source.organizeImports": true
+      }
+    }
+    },
 	"runArgs": [
 		"-u",
 		"vscode",
@@ -24,21 +40,6 @@
 		"--mount",
 		"source=${env:HOME}${env:USERPROFILE},target=/home/${env:USERNAME}${env:USER},type=bind,consistency=delegated",
 	],
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"go.toolsManagement.checkForUpdates": "local",
-		"go.useLanguageServer": true,
-		"go.gopath": "/go",
-		"go.goroot": "/usr/local/go",
-		"go.formatTool": "goimports",
-		"[go]": {
-			"editor.snippetSuggestions": "none",
-			"editor.formatOnSave": true,
-			"editor.codeActionsOnSave": {
-				"source.organizeImports": true
-			}
-		},
-	},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"golang.Go"
